reafctor to not use HomeController in Tests but instead call logic directly from movieService to keep Controllers and View seperate